@@ -1,3 +1,11 @@
+2005-07-25 Francois Proulx <francois.proulx@gmail.com>
+	* Added Geocoders
+		* /classes/AbstractGeocoder.php
+		* /classes/Geocoders/GeocoderCanada.php
+		* /classes/Geocoders/GeocoderUsa.php
+	* This will be used for enterring GIS data
+	* Coming in the next few days : set hotspot gis using Google Maps + Geocoding
+		
 2005-01-25 Pascal Leclerc  <pascal@plec.ca>
 	* Fix hardcoded images path in classes/MainUI.php
 
